[package]
name = "rust_server_wol"
version = "0.1.0"
authors = ["Alexandr Bogomyakov <abogomyakov@iponweb.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wake-on-lan = "0.2.0"
yaml-rust = "0.4.3"
router_os = { path = "router_os" }
